--- a/portfolio.html
+++ b/portfolio.html
@@ -21,9 +21,9 @@
     <link rel="stylesheet" href="./css/portfolio.css" />
   </head>
   <body>
+    <!-- header -->
     <header class="header">
-      <!-- header -->
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-nav">
           <a href="./index.html" class="header-logo-web link"
             >Web <span class="header-logo link">Studio</span></a
@@ -57,6 +57,7 @@
       </div>
     </header>
     <main>
+      <!--filter-->
       <section class="filter">
         <div class="container">
           <h1 class="filter-main" hidden>button</h1>
@@ -97,6 +98,7 @@
             <li class="example-photo">
               <a class="example-img-text link" href="">
                 <img
+                  class="example-img link"
                   src="./images/qr-code.jpg"
                   alt="payment example qr code"
                   width="360"
@@ -109,6 +111,7 @@
             <li class="example-photo">
               <a class="example-img-text link" href="">
                 <img
+                  class="example-img link"
                   src="./images/meditation-app.jpg"
                   alt="meditation App"
                   width="360"
@@ -200,8 +203,9 @@
         </div>
       </section>
     </main>
+    <!-- footer -->
     <footer class="footer link">
-      <div class="container">
+      <div class="container footer-bottom">
         <a class="footer-logo link" href="./index.html"
           >Web<span class="footer-logo-studio link">Studio</span></a
         >
