--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <!--header-->
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-nav">
           <a href="./index.html" class="header-logo-web link"
             >Web <span class="header-logo link">Studio</span></a
@@ -42,7 +42,7 @@
           </ul>
         </nav>
         <address class="header-contacts">
-          <ul class="neader-list list">
+          <ul class="header-list list">
             <li class="header-contact list">
               <a class="contact link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -69,7 +69,7 @@
       <section class="features-icon">
         <div class="container">
           <h2 class="features-title" hidden>features</h2>
-          <ul class="list">
+          <ul class="features-list">
             <li class="features list">
               <h3 class="features-subtitle">Strategy</h3>
               <p class="features-item">
@@ -84,7 +84,7 @@
                 within the shortest possible time.
               </p>
             </li>
-            <li class="features list list">
+            <li class="features list">
               <h3 class="features-subtitle">Diligence</h3>
               <p class="features-item">
                 Research and confirm brands that present the strongest digital
@@ -120,6 +120,7 @@
             <li class="examples-text list">
               <a class="examples-img" href="">
                 <img
+                  class="examples-img"
                   src="./images/example-on-the-phone.jpg"
                   alt="examples"
                   width="360"
@@ -131,6 +132,7 @@
             <li class="examples-text list">
               <a class="examples-img" href="">
                 <img
+                  class="examples-img"
                   src="./images/example-on-the-phone-2.jpg"
                   alt="examples"
                   width="360"
@@ -151,7 +153,7 @@
                 <img
                   class="team-photo"
                   src="./images/Mark-Guerrero.jpg"
-                  alt="staff"
+                  alt="Mark Guerrero"
                   width="264"
                   height="260"
                 />
@@ -164,7 +166,7 @@
                 <img
                   class="team-photo"
                   src="./images/Tom-Ford.jpg"
-                  alt="staff"
+                  alt="Tom Ford"
                   width="264"
                   height="260"
                 />
@@ -177,7 +179,7 @@
                 <img
                   class="team-photo"
                   src="./images/Camila-Garcia.jpg"
-                  alt="staff"
+                  alt="Camila Garcia"
                   width="264"
                   height="260"
                 />
@@ -190,7 +192,7 @@
                 <img
                   class="team-photo"
                   src="./images/Daniel-Wilson.jpg"
-                  alt="staff"
+                  alt="Daniel Wilson"
                   width="264"
                   height="260"
                 />
@@ -204,7 +206,7 @@
     </main>
     <!--footer -->
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-bottom">
         <a class="footer-logo link" href="./index.html"
           >Web<span class="footer-logo-studio link">Studio</span></a
         >
