--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
           <a href="./index.html" class="header-logo-web link"
             >Web <span class="header-logo link">Studio</span></a
           >
-          <ul class="header-list list">
+          <ul class="header-menu list">
             <li class="header-item list">
               <a class="header-text link" href="./index.html">Studio</a>
             </li>
@@ -41,7 +41,7 @@
           </ul>
         </nav>
         <address class="header-contacts">
-          <ul class="header-menu list">
+          <ul class="header-list list">
             <li class="header-contact list">
               <a class="contact link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -58,9 +58,9 @@
     </header>
     <main>
       <!--filter-->
-      <section class="filter">
-        <div class="container">
-          <h1 class="filter-main" hidden>button</h1>
+      <section class="section">
+        <div class="container filter">
+          <h1 class="visually-hidden" hidden>button</h1>
           <ul class="filter-list list">
             <li class="filter-text list">
               <button class="filter-btn" type="button">All</button>
@@ -91,8 +91,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="example-title">Banking App Interface Concept</h2>
-                <p class="example-item">App</p>
+                <div class="example-border">
+                  <h2 class="example-title">Banking App Interface Concept</h2>
+                  <p class="example-item">App</p>
+                </div>
               </a>
             </li>
             <li class="example-photo">
@@ -104,8 +106,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="example-title">Cashless Payment</h2>
-                <p class="example-item">Marketing</p>
+                <div class="example-border">
+                  <h2 class="example-title">Cashless Payment</h2>
+                  <p class="example-item">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="example-photo">
@@ -117,8 +121,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="example-title">Meditation App</h2>
-                <p class="example-item">App</p>
+                <div class="example-border">
+                  <h2 class="example-title">Meditation App</h2>
+                  <p class="example-item">App</p>
+                </div>
               </a>
             </li>
             <li class="example-photo">
@@ -130,8 +136,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="example-title">Taxi Service</h2>
-                <p class="example-item">Marketing</p>
+                <div class="example-border">
+                  <h2 class="example-title">Taxi Service</h2>
+                  <p class="example-item">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="example-photo">
@@ -143,8 +151,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="example-title">Screen Illustrations</h2>
-                <p class="example-item">Design</p>
+                <div class="example-border">
+                  <h2 class="example-title">Screen Illustrations</h2>
+                  <p class="example-item">Design</p>
+                </div>
               </a>
             </li>
             <li class="example-photo">
@@ -156,8 +166,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="example-title">Online Courses</h2>
-                <p class="example-item">Marketing</p>
+                <div class="example-border">
+                  <h2 class="example-title">Online Courses</h2>
+                  <p class="example-item">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="example-photo">
@@ -169,8 +181,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="example-title">Instagram Stories Concept</h2>
-                <p class="example-item">Design</p>
+                <div class="example-border">
+                  <h2 class="example-title">Instagram Stories Concept</h2>
+                  <p class="example-item">Design</p>
+                </div>
               </a>
             </li>
             <li class="example-photo">
@@ -182,8 +196,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="example-title">Organic Food</h2>
-                <p class="example-item">Web Site</p>
+                <div class="example-border">
+                  <h2 class="example-title">Organic Food</h2>
+                  <p class="example-item">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="example-photo">
@@ -195,8 +211,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="example-title">Fresh Coffee</h2>
-                <p class="example-item">Web Site</p>
+                <div class="example-border">
+                  <h2 class="example-title">Fresh Coffee</h2>
+                  <p class="example-item">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
