--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         </div>
       </section>
       <!-- features -->
-      <section class="features-icon">
+      <section class="section">
         <div class="container">
-          <h2 class="features-title" hidden>features</h2>
+          <h2 class="visually-hidden" hidden>features</h2>
           <ul class="features-list">
             <li class="features list">
               <h3 class="features-subtitle">Strategy</h3>
@@ -102,49 +102,43 @@
         </div>
       </section>
       <!-- examples -->
-      <section class="examples-desc">
+      <section class="section">
         <div class="container">
           <h2 class="examples">What are we doing</h2>
           <ul class="examples-list list">
             <li class="examples-text list">
-              <a class="examples-img" href="">
-                <img
-                  class="examples-img"
-                  src="./images/example-on-a-computer.jpg"
-                  alt="examples"
-                  width="360"
-                  height="300"
-                />
-              </a>
+              <img
+                class="examples-img"
+                src="./images/example-on-a-computer.jpg"
+                alt="examples"
+                width="360"
+                height="300"
+              />
             </li>
             <li class="examples-text list">
-              <a class="examples-img" href="">
-                <img
-                  class="examples-img"
-                  src="./images/example-on-the-phone.jpg"
-                  alt="examples"
-                  width="360"
-                  height="300"
-                />
-              </a>
+              <img
+                class="examples-img"
+                src="./images/example-on-the-phone.jpg"
+                alt="examples"
+                width="360"
+                height="300"
+              />
             </li>
 
             <li class="examples-text list">
-              <a class="examples-img" href="">
-                <img
-                  class="examples-img"
-                  src="./images/example-on-the-phone-2.jpg"
-                  alt="examples"
-                  width="360"
-                  height="300"
-                />
-              </a>
+              <img
+                class="examples-img"
+                src="./images/example-on-the-phone-2.jpg"
+                alt="examples"
+                width="360"
+                height="300"
+              />
             </li>
           </ul>
         </div>
       </section>
       <!--team-->
-      <section class="team-back">
+      <section class="team-back section">
         <div class="container">
           <h2 class="team">Our Team</h2>
           <ul class="team-list list">
