--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <!-- features -->
       <section class="section">
         <div class="container">
-          <h2 class="visually-hidden" hidden>features</h2>
+          <h2 class="visually-hidden">features</h2>
           <ul class="features-list">
             <li class="features list">
               <h3 class="features-subtitle">Strategy</h3>
@@ -102,7 +102,7 @@
         </div>
       </section>
       <!-- examples -->
-      <section class="section">
+      <section class="section examples-section">
         <div class="container">
           <h2 class="examples">What are we doing</h2>
           <ul class="examples-list list">
@@ -151,8 +151,10 @@
                   width="264"
                   height="260"
                 />
-                <h3 class="team-title">Mark Guerrero</h3>
-                <p class="team-item">Product Designer</p>
+                <div class="team-icon">
+                  <h3 class="team-title">Mark Guerrero</h3>
+                  <p class="team-item">Product Designer</p>
+                </div>
               </a>
             </li>
             <li class="team-text list">
@@ -164,8 +166,10 @@
                   width="264"
                   height="260"
                 />
-                <h3 class="team-title">Tom Ford</h3>
-                <p class="team-item">Frontend Developer</p>
+                <div class="team-icon">
+                  <h3 class="team-title">Tom Ford</h3>
+                  <p class="team-item">Frontend Developer</p>
+                </div>
               </a>
             </li>
             <li class="team-text list">
@@ -177,8 +181,10 @@
                   width="264"
                   height="260"
                 />
-                <h3 class="team-title">Camila Garcia</h3>
-                <p class="team-item">Marketing</p>
+                <div class="team-icon">
+                  <h3 class="team-title">Camila Garcia</h3>
+                  <p class="team-item">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="team-text list">
@@ -190,8 +196,10 @@
                   width="264"
                   height="260"
                 />
-                <h3 class="team-title">Daniel Wilson</h3>
-                <p class="team-item">UI Designer</p>
+                <div class="team-icon">
+                  <h3 class="team-title">Daniel Wilson</h3>
+                  <p class="team-item">UI Designer</p>
+                </div>
               </a>
             </li>
           </ul>
