--- a/portfolio.html
+++ b/portfolio.html
@@ -58,9 +58,9 @@
     </header>
     <main>
       <!--filter-->
-      <section class="section">
-        <div class="container filter">
-          <h1 class="visually-hidden" hidden>button</h1>
+      <section class="section filter-section">
+        <div class="container">
+          <h1 class="visually-hidden">button</h1>
           <ul class="filter-list list">
             <li class="filter-text list">
               <button class="filter-btn" type="button">All</button>
@@ -78,9 +78,8 @@
               <button class="filter-btn" type="button">Marketing</button>
             </li>
           </ul>
-        </div>
-        <!----------- example------ -->
-        <div class="container">
+
+          <!----------- example------ -->
           <ul class="example-list list">
             <li class="example-photo">
               <a class="example-img-text link" href="">
